LPS-77699 Update Translations

--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ar.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=إدارة المؤسّسات
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=إدارة حسابات المنظمات الفرعية
 action.VIEW_ORGANIZATIONS=عرض المنظمات
 action.VIEW_USERS=عرض المستخدمين
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=إضافة مجموعة حساب
 add-account-role=إضافة دور الحساب
 add-domain=إضافة مجال
 add-new-user-to-x=إضافة مستخدم جديد إلى {0}
