--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ca.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Gestiona les organitzacions
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Gestioneu els comptes de les suborganitzacions
 action.VIEW_ORGANIZATIONS=Mostra les organitzacions
 action.VIEW_USERS=Mostra els usuaris
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Afegeix un grup de compte
 add-account-role=Afegeix un rol de compte
 add-domain=Afegeix un domini
 add-new-user-to-x=Afegeix un usuari nou a {0}
