--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_de.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Organisationen verwalten
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Untergeordnete Organisationskonten verwalten
 action.VIEW_ORGANIZATIONS=Organisationen anzeigen
 action.VIEW_USERS=Benutzer anzeigen
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Kontengruppe hinzufügen
 add-account-role=Kontorolle hinzufügen
 add-domain=Domain hinzufügen
 add-new-user-to-x=Neuen Benutzer zu {0} hinzufügen
