--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_fi.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Hallinnoi Organisaatioita
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Hallinnoi Alaorganisaatioiden Tilejä
 action.VIEW_ORGANIZATIONS=Näytä Organisaatiot
 action.VIEW_USERS=Näytä Käyttäjät
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Lisää Tiliryhmä
 add-account-role=Lisää Tilirooli
 add-domain=Lisää Toimialue
 add-new-user-to-x=Lisää Uusi Käyttäjä Kohteeseen {0}
