--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_fr.properties
@@ -1,5 +1,5 @@
 account-display-data=Données d'affichage du compte
-account-group-name=Account Group Name (Automatic Copy)
+account-group-name=Nom du groupe de comptes
 account-id=ID du compte
 account-roles=Rôles de compte
 action.ADD_ACCOUNT_ENTRY=Ajouter une entrée de compte
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Gérer les organisations
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Gérer les comptes des sous-organisations
 action.VIEW_ORGANIZATIONS=Voir les organisations
 action.VIEW_USERS=Voir les utilisateurs
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Ajouter un groupe de compte
 add-account-role=Ajouter un rôle de compte
 add-domain=Ajouter un domaine
 add-new-user-to-x=Ajouter un nouvel utilisateur à {0}
@@ -27,7 +27,7 @@ assign-organizations-to-x=Assigner des organisations à {0}
 assign-parent-account=Assigner un compte parent
 assign-users-to-x=Assigner les utilisateurs à {0}
 current-account-users=Utilisateurs du compte courant
-domain-name=Domain Name (Automatic Copy)
+domain-name=Nom du domaine
 filter-by-accounts=Filtrer par comptes
 filter-by-type=Filtrer par type
 for-multiple-domains,-separate-each-domain-by-a-comma=Si plusieurs domaines il y a, séparez-les d'une virgule.
@@ -40,7 +40,7 @@ manage-users=Gérer les utilisateurs
 model.resource.com.liferay.account=Compte
 model.resource.com.liferay.account.model.AccountEntry=Entrée de compte
 more-information=Plus d'informations
-no-account-groups-were-found=No account groups were found. (Automatic Copy)
+no-account-groups-were-found=Aucun groupe de comptes trouvé.
 no-accounts-were-found=Aucun compte n'a été trouvé.
 no-assigned-account=Aucun compte assigné
 parent-account=Compte parent
@@ -50,10 +50,10 @@ select-an-account=Sélectionner un compte
 showing-users-with-valid-domains-only=Affichage des utilisateurs avec des domaines valides uniquement. Pour voir tous les utilisateurs, utilisez le filtre pour mettre à jour la liste.
 tax-id=ID fiscal
 tax-id-help=Saisissez l'ID fiscal du compte (EIN, numéro de TVA, etc.).
-the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=Les domaines d'e-mail suivants sont partagés entre tous les comptes de cet utilisateur.
 there-are-no-organizations-associated-with-this-account=Aucune organisation n'est associée à cet compte.
 there-are-no-roles=Il n'y a aucun rôle.
-there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
+there-are-no-shared-email-domains-for-this-users-accounts=Il n'y a aucun domaine d'e-mail partagé pour les comptes de cet utilisateur.
 there-are-no-users-associated-with-this-account=Aucun utilisateur n'est associé à ce compte.
 there-are-no-users-associated-with-this-role=Aucun utilisateur n'est associé à ce rôle.
 this-account-does-not-have-a-parent-account=Ce compte n'a pas de compte parent.
@@ -61,5 +61,5 @@ this-account-does-not-have-a-valid-domain=Ce compte n'a pas de domaine valide.
 this-user-does-not-belong-to-any-accounts=Cet utilisateur n'appartient pas à un compte.
 user-display-data=Données d'affichage de l'utilisateur
 valid-domains=Domaines valides
-view-valid-domains=View Valid Domains (Automatic Copy)
-x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
+view-valid-domains=Afficher les domaines valides
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} n'est pas un domaine valide pour les comptes suivants : {1}.
