--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ja.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=組織を管理
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=サブ組織アカウントの管理
 action.VIEW_ORGANIZATIONS=組織の表示
 action.VIEW_USERS=ユーザーの参照
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=アカウントグループを追加
 add-account-role=アカウントロールを追加
 add-domain=ドメインを追加
 add-new-user-to-x={0}に新規ユーザーを追加
