--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_nl.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Organisaties beheren
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Accounts van suborganisaties beheren
 action.VIEW_ORGANIZATIONS=Organisaties bekijken
 action.VIEW_USERS=Gebruikers bekijken
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Accountgroep toevoegen
 add-account-role=Accountrol toevoegen
 add-domain=Domein toevoegen
 add-new-user-to-x=Nieuwe gebruiker toevoegen aan {0}
