--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_pt_BR.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Gerenciar organizações
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Gerenciar contas de suborganizações
 action.VIEW_ORGANIZATIONS=Visualizar organizações
 action.VIEW_USERS=Visualizar usuários
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Adicionar grupo de Contas
 add-account-role=Adicionar Função de Contas
 add-domain=Adicionar domínio
 add-new-user-to-x=Adicionar Novo Usuário a {0}
