--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_sv.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Hantera organisationer
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Hantera konton för underorganisationer
 action.VIEW_ORGANIZATIONS=Visa organisationer
 action.VIEW_USERS=Visa användare
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Lägg till kontogrupp
 add-account-role=Lägg till kontoroll
 add-domain=Lägg till domän
 add-new-user-to-x=Lägg till ny användare i {0}
