--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_zh_CN.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=管理组织
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=管理子组织帐户
 action.VIEW_ORGANIZATIONS=查看组织
 action.VIEW_USERS=查看用户
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=添加帐户组
 add-account-role=添加帐户角色
 add-domain=添加域
 add-new-user-to-x=将新用户添加到 {0} 中
