--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_ca.properties
@@ -6,7 +6,7 @@ an-entry-was-updated=S'ha actualitzat una entrada.
 any-field-added-to-the-object-or-to-a-form-view-appears-here=Qualsevol camp afegit a l'objecte o a una vista de formulari apareix aquí.
 app-builder=Creador d'aplicacions
 app-permissions=Permisos de l'aplicació
-applications-and-site-menu=Applications and Site Menu (Automatic Copy)
+applications-and-site-menu=Aplicacions i menú del lloc web
 apps=Aplicacions
 choose-options=Trieu opcions
 choose-sites=Tria els llocs web
@@ -23,7 +23,7 @@ delete-from-object=Suprimeix de l'objecte
 deploy-a-standalone-app-with-a-direct-link=Implementa una aplicació independent amb un enllaç directe.
 deploy-a-widget=Implementa un giny.
 deploy-as=Implementa com a
-deploy-into-applications-or-a-site-menu=Deploy into applications or a site menu. (Automatic Copy)
+deploy-into-applications-or-a-site-menu=Desplegueu a dins de les aplicacions o d'un menú d'un lloc web.
 deployed=Implementat
 deployed-as=Implementat com a
 deployment-type=Tipus d'implementació
