--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_fr.properties
@@ -52,7 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Étiquette de menu
 model.resource.com.liferay.app.builder=Ajouter un générateur
 native=Natif
-native-fields=Native Fields (Automatic Copy)
+native-fields=Champs natifs
 new-app=Nouvelle application
 new-custom-object=Nouvel objet personnalisé
 new-form-view=Nouvel affichage de formulaire
