--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_hu.properties
@@ -52,7 +52,7 @@ javax.portlet.title.com_liferay_app_builder_web_internal_portlet_ObjectsPortlet=
 menu-label=Menücímke
 model.resource.com.liferay.app.builder=App Builder
 native=Natív
-native-fields=Native Fields (Automatic Copy)
+native-fields=Natív mezők
 new-app=Új alkalmazás
 new-custom-object=Új egyéni objektum
 new-form-view=Új űrlap-nézet
