--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language_nl.properties
@@ -6,7 +6,7 @@ an-entry-was-updated=Er werd invoer bijgewerkt.
 any-field-added-to-the-object-or-to-a-form-view-appears-here=Bij toevoeging van een veld aan een object of formulierweergave verschijnt het hier.
 app-builder=App-bouwer
 app-permissions=App-rechten
-applications-and-site-menu=Applications and Site Menu (Automatic Copy)
+applications-and-site-menu=Applicaties en sitemenu
 apps=Apps
 choose-options=Opties kiezen
 choose-sites=Kies sites
@@ -23,7 +23,7 @@ delete-from-object=Verwijderen uit object
 deploy-a-standalone-app-with-a-direct-link=Een autonome app met een directe link gebruiken.
 deploy-a-widget=Een widget gebruiken.
 deploy-as=Implementeren als
-deploy-into-applications-or-a-site-menu=Deploy into applications or a site menu. (Automatic Copy)
+deploy-into-applications-or-a-site-menu=Aanwenden in applicaties of een sitemenu.
 deployed=Geïmplementeerd
 deployed-as=Geïmplementeerd als
 deployment-type=Implementatietype
