--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_fr.properties
@@ -23,4 +23,4 @@ the-asset-subtype-no-longer-exists=Le sous-type d'actif n'existe plus.
 the-category-x-and-parent-category-should-not-be-the-same=La catégorie {0} and la catégorie parent ne doivent pas être la même.
 the-vocabulary-could-not-be-found=La catégorie n'a pu être trouvée.
 there-are-no-vocabularies=Il n'y a pas de vocabulaires/lexiques.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Les vocabulaires sont nécessaires pour créer des catégories.
