--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_hu.properties
@@ -23,4 +23,4 @@ the-asset-subtype-no-longer-exists=A tartalom altípusa már nem létezik.
 the-category-x-and-parent-category-should-not-be-the-same=A kategória {0} és a szülő kategória nem lehet ugyanaz.
 the-vocabulary-could-not-be-found=A szótár nem található.
 there-are-no-vocabularies=Nincsenek szótárak.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=A kategóriák létrehozásához szótárak kellenek.
