--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_nl.properties
@@ -23,4 +23,4 @@ the-asset-subtype-no-longer-exists=Het assetsubtype bestaat niet meer.
 the-category-x-and-parent-category-should-not-be-the-same=De categorie {0} en bovenliggende categorie moeten niet hetzelfde zijn.
 the-vocabulary-could-not-be-found=De categorie werd niet gevonden.
 there-are-no-vocabularies=Er zijn geen woordenlijsten.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Om categorieën te maken, zijn woordenlijsten nodig.
