--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ca.properties
@@ -6,10 +6,10 @@ content-x=Contingut ({0})
 create-marketing-categories-to-label-and-audit-your-content=Creeu categories de màrqueting per etiquetar i auditar el contingut.
 education=Educació
 filter-by=Filtrar per (Automatic Translation)
-filter-by-author=Filtra per autor (Automatic Translation)
+filter-by-author=Filtra per autor
 filter-by-status=Filtra per estat
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Tauler de contingut
-select-author=Seleccioneu autor (Automatic Translation)
+select-author=Seleccioneu un autor
 site-or-asset-library=Biblioteca de llocs o d'actius (Automatic Translation)
 solution=Solució
 there-is-no-content=No hi ha cap contingut.
