--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fr.properties
@@ -6,11 +6,11 @@ content-x=Contenu ({0})
 create-marketing-categories-to-label-and-audit-your-content=Créez des catégories de marketing pour libeller et faire des audits de votre contenu.
 education=Éducation
 filter-by=Filtrer par (Automatic Translation)
-filter-by-author=Filtrer par auteur (Automatic Translation)
+filter-by-author=Filtrer par auteur
 filter-by-status=Filtrer par statut
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Tableau de bord du contenu
-select-author=Sélectionner l'auteur (Automatic Translation)
-site-or-asset-library=Bibliothèque de sites ou d'actifs (Automatic Translation)
+select-author=Sélectionner l'auteur
+site-or-asset-library=Site ou dépôt
 solution=Solution
 there-is-no-content=Il n'y a aucun contenu.
 there-is-no-data=Il n'y a aucune donnée.
