--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hu.properties
@@ -6,11 +6,11 @@ content-x=Tartalom ({0})
 create-marketing-categories-to-label-and-audit-your-content=Hozzon létre marketing-kategóriákat tartalma felcímkézéséhez és auditjához.
 education=Oktatás
 filter-by=Szűrés (Automatic Translation)
-filter-by-author=Szűrés szerző szerint (Automatic Translation)
+filter-by-author=Szűrés szerző szerint
 filter-by-status=Szűrés állapot szerint
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Tartalom műszerfal
-select-author=Szerző kiválasztása (Automatic Translation)
-site-or-asset-library=Webhely vagy eszköztár (Automatic Translation)
+select-author=Szerző kiválasztása
+site-or-asset-library=Webhely vagy adattár
 solution=Megoldás
 there-is-no-content=Nincs tartalom.
 there-is-no-data=Nincs adat.
