--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/content/Language_ca.properties
@@ -8,4 +8,4 @@ example-rich-text=Text enriquit d'exemple
 example-text=Text d'exemple
 you-must-define-a-unique-id-for-each-editable-element=Heu de definir un ID únic per a cada element editable.
 you-must-define-a-valid-type-for-each-editable-element=Heu de definir un tipus vàlid per a cada element editable.
-you-must-define-all-required-attributes-x-for-each-editable-element=You must define all required attributes ({0}) for each editable element. (Automatic Copy)
+you-must-define-all-required-attributes-x-for-each-editable-element=Heu de definir tots els atributs obligatoris ({0}) per a cada element editable.
