--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/content/Language_nl.properties
@@ -8,4 +8,4 @@ example-rich-text=Voorbeeld-Rich Text
 example-text=Voorbeeldtekst
 you-must-define-a-unique-id-for-each-editable-element=U moet een unieke ID definiëren voor elk bewerkbaar element.
 you-must-define-a-valid-type-for-each-editable-element=U moet een geldig type definiëren voor elk bewerkbaar element.
-you-must-define-all-required-attributes-x-for-each-editable-element=You must define all required attributes ({0}) for each editable element. (Automatic Copy)
+you-must-define-all-required-attributes-x-for-each-editable-element=U moet alle vereiste attributen ({0}) definiëren voor elk bewerkbaar element.
