--- a/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_ca.properties
@@ -1,13 +1,13 @@
 add-filter=Afegeix filtre
 edit-filter=Edita el filtre
 final-price=Preu final
-no-filters=Sense filtres (Automatic Translation)
+no-filters=Sense filtres
 no-filters-were-found=No s'ha trobat cap filtre.
-no-items=Cap element (Automatic Translation)
+no-items=Sense elements
 no-items-were-found=No s'han trobat articles.
-price-summary=Resum del priice (Automatic Translation)
+price-summary=Resum de preus
 reset-filters=Restableix els filtres
 set-filters=Estableix els filtres
-table-data=Dades de la taula (Automatic Translation)
+table-data=Dades de la taula
 table-data-updated=S'han actualitzat les dades de la taula
 unexpected-error=Error inesperat
