--- a/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_fr.properties
@@ -1,13 +1,13 @@
 add-filter=Ajouter un filtre
 edit-filter=Modifier le filtre
 final-price=Prix final
-no-filters=Pas de filtres (Automatic Translation)
+no-filters=Aucun filtre
 no-filters-were-found=Aucun filtre trouvé.
-no-items=Aucun élément (Automatic Translation)
+no-items=Aucun article
 no-items-were-found=Aucun article trouvé.
-price-summary=Résumé priice (Automatic Translation)
+price-summary=Résumé tarifaire
 reset-filters=Réinitialiser les filtres
 set-filters=Définir les filtres
-table-data=Données de tableau (Automatic Translation)
+table-data=Données du tableau
 table-data-updated=Données du tableau mises à jour
 unexpected-error=Erreur inattendue
