--- a/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_hu.properties
@@ -1,13 +1,13 @@
 add-filter=Szűrő hozzáadása
 edit-filter=Szűrő szerkesztése
 final-price=Végső ár
-no-filters=Nincsenek szűrők (Automatic Translation)
+no-filters=Nincsenek szűrők
 no-filters-were-found=Nem találhatók szűrők.
-no-items=Nincs elem (Automatic Translation)
+no-items=Nincsenek elemek
 no-items-were-found=Nem található tétel.
-price-summary=Priice összefoglaló (Automatic Translation)
+price-summary=Ár összegzése
 reset-filters=Szűrők visszaállítása
 set-filters=Szűrők beállítása
-table-data=Táblaadatok (Automatic Translation)
+table-data=Táblázat adatai
 table-data-updated=Táblázat adatai frissítve
 unexpected-error=Váratlan hiba
