--- a/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/content/Language_nl.properties
@@ -1,13 +1,13 @@
 add-filter=Filter toevoegen
 edit-filter=Filter bewerken
 final-price=Eindprijs
-no-filters=No Filters (Automatic Copy)
+no-filters=Geen filters
 no-filters-were-found=Geen filters gevonden.
-no-items=No Items (Automatic Copy)
+no-items=Geen items
 no-items-were-found=Geen items gevonden.
-price-summary=Priice Summary (Automatic Copy)
+price-summary=Prijsoverzicht
 reset-filters=Filters resetten
 set-filters=Filters instellen
-table-data=Table data (Automatic Copy)
+table-data=Tabelgegevens
 table-data-updated=Tabelgegevens bijgewerkt
 unexpected-error=Onverwachte fout
