--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ca.properties
@@ -111,7 +111,7 @@ from-your-computer=Des del vostre ordinador
 ftl[stands-for]=FreeMarker
 group-id=ID del grup
 import-file=Importa el fitxer
-import-translation=Importar traducció (Automatic Translation)
+import-translation=Importa la traducció
 in-order-to-preview-your-changes,-the-web-content-is-saved-as-a-draft=Per poder previsualitzar els canvis, el contingut web es desa com a esborrany. Segur que ho voleu fer?
 index-all-article-versions-enabled=Indexació de totes les versions dels articles habilitada
 javax.portlet.description.com_liferay_journal_web_portlet_JournalPortlet=Contingut web pot ser qualsevol contingut que vulguis afegir a un lloc web, com articles, una FAQ o una notícia. Els administradors poden gestionar el contingut i assignar rols d'usuari i permisos. Els usuaris poden afegir, editar, aprovar o veure contingut depenent del seu rol.
@@ -201,7 +201,7 @@ please-select-an-existing-small-image=Seleccioneu una imatge petita que existeix
 please-select-an-existing-structure=Seleccioneu una estructura que existeixi.
 please-select-an-existing-template=Seleccioneu una plantilla que existeixi.
 please-select-one-option=Seleccioneu una opció.
-please-upload-your-translation-file=Si us plau carregueu el vostre fitxer de traducció (. xliff,. XLF). (Automatic Translation)
+please-upload-your-translation-file=Pugeu el vostre fitxer de traducció (.xliff, .xlf).
 presentation-settings=Configuració de la presentació
 preview-draft=Previsualitza l'esborrany
 preview-draft-in-page=Previsualitza l'esborrany a la pàgina
@@ -268,7 +268,7 @@ the-folder-you-selected-does-not-allow-this-type-of-structure.-please-select-a-d
 the-selected-web-content-was-deleted=El contingut web seleccionat s'ha suprimit.
 the-selected-web-content-was-moved-to-the-recycle-bin=El contingut web seleccionat s'ha desplaçat a la paperera de reciclatge.
 the-structure-you-selected-is-not-valid-for-this-folder=El tipus de document que heu seleccionat no és vàlid per a aquesta carpeta.
-the-translation-file-x-does-not-correspond-to-this-web-content=The translation file ({0}) does not correspond to this web content. (Automatic Copy)
+the-translation-file-x-does-not-correspond-to-this-web-content=El fitxer de traducció ({0}) no correspon a aquest contingut web.
 the-web-content-article-x-was-moved-to-the-recycle-bin=L'article de contingut web <strong><em>{0}</em></strong> s'ha desplaçat a la paperera de reciclatge.
 there-are-no-journal-images=No hi ha cap imatge de contingut web.
 there-are-no-structures=No hi ha estructures.
