--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fr.properties
@@ -26,7 +26,7 @@ browse-by-structure=Naviguer par structure
 category.journal=Gestion de contenu web
 change-list=Liste de modifications
 changeable-default-language-description=Si cochée, la langue par défaut des articles du contenu web sera modifiable. La langue par défaut des articles du contenu web est héritée des paramètres du site.
-changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=La modification de l'URL conviviale affectera toutes les versions d'article de contenu Web, même lors de son enregistrement sous forme de brouillon. (Automatic Translation)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Modifier l'URL simplifiée affectera toutes les versions des articles du contenu web, même si vous enregistrer en tant que brouillon.
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changer la langue ne traduit pas automatiquement le script de modèle existant.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changer le modèle <strong>n'affectera pas le modèle par défaut des contenus Web d'origine</strong>. <strong>La modification ne s'appliquera qu'à cet affichage de contenu web</strong>.
 characters-blacklist=Liste noire des caractères
@@ -111,7 +111,7 @@ from-your-computer=De votre ordinateur
 ftl[stands-for]=FreeMarker
 group-id=ID groupe
 import-file=Importer un fichier
-import-translation=Importer la traduction (Automatic Translation)
+import-translation=Importer la traduction
 in-order-to-preview-your-changes,-the-web-content-is-saved-as-a-draft=Afin de présivualiser vos modifications, le contenu web est sauvegardé comme brouillon. Êtes-vous sûr(e) de vouloir continuer?
 index-all-article-versions-enabled=Index de toutes les versions des articles activé
 javax.portlet.description.com_liferay_journal_web_portlet_JournalPortlet=Les contenus web peuvent être n'importe quels contenus que vous voulez ajouter à un site, comme articles, FAQs, ou actualités. Les administrateurs peuvent gérer les contenus, tout comme attribuer les rôles d'utilisateur et permission. Les utilisateurs peuvent ajouter, éditer, approuver ou voir les contenus selon leur rôles.
@@ -170,7 +170,7 @@ model.resource.com.liferay.journal=Gestion de contenu web
 model.resource.com.liferay.journal.model.JournalArticle=Contenu web
 model.resource.com.liferay.journal.model.JournalFeed=Article RSS de contenu web
 model.resource.com.liferay.journal.model.JournalFolder=Dossier de contenu web
-modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
+modified-x-ago-by-x=Modification il y a {0} par {1}.
 move-web-content=Déplacer le contenu web
 new-structure=Nouvelle structure
 new-template-for-structure-x=Nouveau modèle pour la structure {0}
@@ -201,7 +201,7 @@ please-select-an-existing-small-image=Veuillez sélectionner un image vignette e
 please-select-an-existing-structure=Veuillez sélectionner une structure existante.
 please-select-an-existing-template=Veuillez sélectionner un gabarit existant.
 please-select-one-option=Veuillez sélectionner une option.
-please-upload-your-translation-file=Veuillez télécharger votre fichier de traduction (.xliff, .xlf). (Automatic Translation)
+please-upload-your-translation-file=Veuillez téléverser votre fichier de traduction (.xliff, .xlf).
 presentation-settings=Paramètres de présentation
 preview-draft=Aperçu du brouillon
 preview-draft-in-page=Aperçu du brouillon dans la page
@@ -268,7 +268,7 @@ the-folder-you-selected-does-not-allow-this-type-of-structure.-please-select-a-d
 the-selected-web-content-was-deleted=Le contenu web sélectionné a été supprimé.
 the-selected-web-content-was-moved-to-the-recycle-bin=Le contenu web sélectionné a été déplacé dans la Corbeille.
 the-structure-you-selected-is-not-valid-for-this-folder=Le type de document que vous avez sélectionné n'est pas valide pour ce dossier.
-the-translation-file-x-does-not-correspond-to-this-web-content=The translation file ({0}) does not correspond to this web content. (Automatic Copy)
+the-translation-file-x-does-not-correspond-to-this-web-content=Le fichier de traduction ({0}) ne correspond pas à ce contenu web.
 the-web-content-article-x-was-moved-to-the-recycle-bin=L'article de contenu web <strong><em>{0}</em></strong> a été déplacé dans la Corbeille.
 there-are-no-journal-images=Il n'y a pas d'images de contenu web.
 there-are-no-structures=Il n'y a aucune structure.
