--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
@@ -26,7 +26,7 @@ browse-by-structure=Struktúra alapú böngészés
 category.journal=Webes tartalomkezelés
 change-list=Változáslista
 changeable-default-language-description=Ha bejelölték, a web tartalmi indexek alapértelmezett nyelve módosítható lesz. A web tartalmi cikkek az alapértelmezett nyelvüket a webhely beállításaitól öröklődik.
-changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=A barátságos URL módosítása hatással lesz a webes tartalomcikk összes verziójára, még akkor is, ha piszkozatként menti. (Automatic Translation)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=A böngészőbarát URL-cím megváltoztatása hatással lesz a webes tartalom cikkeinek összes verziójára, még a piszkozatként történő elmentés esetében is.
 changing-the-language-does-not-automatically-translate-the-existing-template-script=A nyelvváltás nem fordítja le automatikusan a létező sablon parancsfájlját.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=A sablon megváltoztatása <strong>nincs hatással az eredeti webes tartalom</strong> alapértelmezett sablonjára. <strong>A változás csak a jelen webes tartalom megjelenítésére vonatkozik</strong>.
 characters-blacklist=Karakterek feketelistája
@@ -111,7 +111,7 @@ from-your-computer=A számítógépéből
 ftl[stands-for]=FreeMarker
 group-id=Csoport ID
 import-file=Fájl importálása
-import-translation=Fordítás importálása (Automatic Translation)
+import-translation=Fordítás importálása
 in-order-to-preview-your-changes,-the-web-content-is-saved-as-a-draft=A változtatásaid előnézetének megtekintéséhez a webtartalom mentésre kerül piszkozatként. Biztos, hogy ezt szeretnéd?
 index-all-article-versions-enabled=Az összes cikkverzió indexelése engedélyezve
 javax.portlet.description.com_liferay_journal_web_portlet_JournalPortlet=A Webtartalom bármilyen tartalom lehet, amit szeretnél egy webhelyre feltenni: cikkek, GyIK, vagy hírek. Az adminisztrátorok menedzselhetik a tartalmat illetve felhasználói szerepeket és jogosultságokat adhatnak. A felhasználók létrehozhatnak, szerkeszthetnek, engedélyezhetnek, vagy csak megtekinthetnek tartalmakat, a szerepüktől függően.
@@ -170,7 +170,7 @@ model.resource.com.liferay.journal=Webtartalom
 model.resource.com.liferay.journal.model.JournalArticle=Webtartalom cikk
 model.resource.com.liferay.journal.model.JournalFeed=Webtartalom csatorna
 model.resource.com.liferay.journal.model.JournalFolder=Webtartalom mappa
-modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
+modified-x-ago-by-x=Módosította {1}, ennyi ideje: {0}.
 move-web-content=Web tartalom áthelyezése
 new-structure=Új struktúra
 new-template-for-structure-x=Új sablon a következő struktúrához: {0}
@@ -201,7 +201,7 @@ please-select-an-existing-small-image=Válassz egy létező kis képet.
 please-select-an-existing-structure=Válassz egy létező struktúrát.
 please-select-an-existing-template=Válassz egy létező sablont.
 please-select-one-option=Kérjük, válassz egy opciót.
-please-upload-your-translation-file=Töltse fel a fordítási fájlt (.xliff, .xlf). (Automatic Translation)
+please-upload-your-translation-file=Töltse fel a fordításfájlját (.xliff, .xlf).
 presentation-settings=Megjelenítési beállítások
 preview-draft=Vázlat előnézete
 preview-draft-in-page=Vázlat előnézete az oldalon
@@ -268,7 +268,7 @@ the-folder-you-selected-does-not-allow-this-type-of-structure.-please-select-a-d
 the-selected-web-content-was-deleted=A kiválasztott webes tartalmat törölték.
 the-selected-web-content-was-moved-to-the-recycle-bin=A kiválasztott webes tartalom a Lomtárba került.
 the-structure-you-selected-is-not-valid-for-this-folder=Ehhez a mappához nem érvényes a kiválasztott struktúra.
-the-translation-file-x-does-not-correspond-to-this-web-content=The translation file ({0}) does not correspond to this web content. (Automatic Copy)
+the-translation-file-x-does-not-correspond-to-this-web-content=A fordításfájl ({0}) nem felel meg ennek a webes tartalomnak.
 the-web-content-article-x-was-moved-to-the-recycle-bin=A webes tartalom <strong><em>{0}</em></strong> cikke a Lomtárba került.
 there-are-no-journal-images=Nincsenek képek a webes tartalomban.
 there-are-no-structures=Nincsenek struktúrák.
