--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -37,7 +37,7 @@ container=Houder
 container-configuration=Houderconfiguratie
 container-width=Houderbreedte
 content-display=Inhoudweergave
-content-edition=Content Edition (Automatic Copy)
+content-edition=Inhoud bewerken
 content-mapping=Inhoudtoewijzing
 content-name=Naam inhoud
 content-page-editor-configuration-name=Inhoudpagina-editor
@@ -118,7 +118,7 @@ padding-right=Rechts uitvullen
 padding-top=Bovenaan uitvullen
 padding-vertical=Verticaal uitvullen
 page-conversion-description=De paginaconversie wordt getoond in de voorbeeldweergave hieronder. Maak de gewenste wijzigingen voordat u de conversie publiceert, of verwijder het ontwerp om de widgetpagina ongewijzigd te laten.
-page-design=Page Design (Automatic Copy)
+page-design=Paginaontwerp
 page-editor-auto-extend-session-enabled-description=Bij inschakeling wordt de sessie automatisch verlengd terwijl de pagina-editor open is.
 page-editor-configuration-name=Pagina-editor
 page-structure=Paginastructuur
