--- a/modules/apps/portal-security/portal-security-ldap-api/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-security/portal-security-ldap-api/src/main/resources/content/Language_ca.properties
@@ -54,7 +54,7 @@ referral=Referència
 security-credential=Credencial de seguretat
 security-principal=Entitat amb seguretat assignada
 system-ldap-configuration-name=Connexió
-throws=Throws
+throws=Genera
 user-custom-mappings=Mapatges personalitzats d'usuari
 user-custom-mappings-help=Al importar i exportar usuaris, el portal utilitzarà aquesta assignació per connectar els atributs d'usuari LDAP i els atributs de contacte personalitzats del portal.
 user-default-object-classes-help=Quan un usuari s'exporta a LDAP i no existeix l'usuari, l'usuari es crearà amb les següents classes d'objectes predeterminats.
