--- a/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_hu.properties
@@ -1,3 +1,3 @@
-enable-global-menu=Enable Global Apps Menu (Automatic Copy)
-enable-global-menu-description=When enabled, global Control Panel applications are removed from the left-hand Product Menu and stored in a Global Apps Menu, which you can access from the grid menu icon in the upper-right corner. (Automatic Copy)
-global-menu-instance-configuration-name=Global Apps Menu (Automatic Copy)
+enable-global-menu=Globális alkalmazások menü engedélyezése
+enable-global-menu-description=Ha engedélyezve van, a globális Vezérlőközpont alkalmazások törlődnek a bal oldali Termék menüből, és a Globális alkalmazások menüben lesznek tárolva, amelyet a jobb felső sarokban lévő rács ikonon keresztül érhet el.
+global-menu-instance-configuration-name=Globális alkalmazások menü
