--- a/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_nl.properties
@@ -1,3 +1,3 @@
-enable-global-menu=Enable Global Apps Menu (Automatic Copy)
-enable-global-menu-description=When enabled, global Control Panel applications are removed from the left-hand Product Menu and stored in a Global Apps Menu, which you can access from the grid menu icon in the upper-right corner. (Automatic Copy)
-global-menu-instance-configuration-name=Global Apps Menu (Automatic Copy)
+enable-global-menu=Menu Algemene apps inschakelen
+enable-global-menu-description=Bij inschakeling worden applicaties van het algemene bedieningspaneel verwijderd uit het productmenu links en opgeslagen in het menu Algemene apps dat toegankelijk is via het rastermenupictogram in de rechterbovenhoek.
+global-menu-instance-configuration-name=Menu Algemene apps
