--- a/modules/apps/questions/questions-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/questions/questions-web/src/main/resources/content/Language_fr.properties
@@ -25,7 +25,7 @@ latest-edited=Dernière modification
 latest-usage=Dernière utilisation : {0}
 mark-as-answer=Marque comme réponse
 my-activity=Mon activité
-my-subscriptions=Mes abonnements (Automatic Translation)
+my-subscriptions=Mes abonnements
 number-of-replies=Nombre de réponses
 post-answer=Publier la réponse
 post-your-question=Publier votre question
