--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-timebased-otp-web/src/main/resources/content/Language_nl.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-timebased-otp-web/src/main/resources/content/Language_nl.properties
@@ -1,17 +1,17 @@
-algorithm-key-size=Algorithm Key Size (Automatic Copy)
-algorithm-key-size-description=Set the size of the key algorithm. (Automatic Copy)
-clock-skew=Clock Skew (Automatic Copy)
-clock-skew-description=Set the time in milliseconds that the clocks can differ before a code will be rejected. This means the checker could perform a validation against the current time and then two further validations (+ clock skew time / - clock skew time). (Automatic Copy)
-com.liferay.multi.factor.authentication.timebased.otp.web.internal.checker.TimeBasedOTPBrowserSetupMFAChecker=Time-Based One-Time Password (Automatic Copy)
-generate-new-verification=Generate a new time-based one-time password configuration. (Automatic Copy)
-mfa-timebased-otp=Time-Based One-Time Password (Automatic Copy)
-mfa-timebased-otp-configuration-name=Time-Based One-Time Password Configuration (Automatic Copy)
-mfa-timebased-otp-enabled-description=Enable time-based one-time password. Take into account that time-based one-time password also needs to be configured by each user. They will find a new section to configure it at "Account Settings". (Automatic Copy)
-mfa-timebased-otp-verification-already-configured=Time-based one-time password is already configured for your account. (Automatic Copy)
-order-description=Set the multi-factor authentication checker order. Checkers with higher order will be shown first. (Automatic Copy)
-please-enter-the-otp-from-the-application=Please enter the one-time password from the application. (Automatic Copy)
-shared-secret=Shared Secret (Automatic Copy)
-user-account-setup-description=Configure the time-based one-time password in your account. You must introduce the shared secret or scan the QRCode with a software based authenticator to obtain the one-time password. (Automatic Copy)
-user-account-setup-failed=Time-based one-time password configuration setup has failed. (Automatic Copy)
-validation-expiration-time=Validation Expiration Time (Automatic Copy)
-validation-expiration-time-description=Set the time in seconds until session validations expire. (Automatic Copy)
+algorithm-key-size=Grootte algoritmesleutel
+algorithm-key-size-description=Stel de grootte van de algoritmesleutel in.
+clock-skew=Tijdverschil klok
+clock-skew-description=Stel de tijd in milliseconden in waarna een code wordt geweigerd. Dit houdt in dat bij de controle de huidige tijd wordt gevalideerd, waarna nog twee validaties volgen (tijdverschil klok + / tijdverschil klok -).
+com.liferay.multi.factor.authentication.timebased.otp.web.internal.checker.TimeBasedOTPBrowserSetupMFAChecker=Tijdgebaseerd eenmalig wachtwoord
+generate-new-verification=Genereer een nieuwe configuratie voor een tijdgebaseerd eenmalig wachtwoord.
+mfa-timebased-otp=Tijdgebaseerd eenmalig wachtwoord
+mfa-timebased-otp-configuration-name=Configuratie tijdgebaseerd eenmalig wachtwoord
+mfa-timebased-otp-enabled-description=Schakel een tijdgebaseerd eenmalig wachtwoord in. Houd er rekening mee dat tijdgebaseerde wachtwoorden ook door elke gebruiker moeten worden geconfigureerd. Dat kan in een nieuwe sectie onder 'Accountinstellingen'.
+mfa-timebased-otp-verification-already-configured=Er is al een tijdgebaseerd eenmalig wachtwoord geconfigureerd voor uw account.
+order-description=Stel de controlevolgorde voor meervoudige authenticatie in. Controlefactoren met een hogere rangorde worden eerst weergegeven.
+please-enter-the-otp-from-the-application=Voer het eenmalige wachtwoord van de applicatie in.
+shared-secret=Gedeeld geheim
+user-account-setup-description=Configureer het tijdgebaseerde eenmalig wachtwoord in uw account. U moet het gedeelde geheim invoeren of de QR-code scannen met een softwaregebaseerde authenticatietool om het eenmalige wachtwoord te verkrijgen.
+user-account-setup-failed=Het instellen van de configuratie voor het tijdgebaseerde eenmalig wachtwoord is mislukt.
+validation-expiration-time=Vervaltijd voor validatie
+validation-expiration-time-description=Stel de tijd in seconden in waarna de sessievalidatie vervalt.
