--- a/portal-impl/src/content/Language_fr.properties
+++ b/portal-impl/src/content/Language_fr.properties
@@ -65,10 +65,10 @@ category.entertainment=Divertissement
 category.finance=Finances
 category.gadgets=Instruments
 category.global_menu.applications=Applications
-category.global_menu.applications.commerce=Commerce (Automatic Copy)
-category.global_menu.applications.communication=Communication (Automatic Copy)
+category.global_menu.applications.commerce=Commerce
+category.global_menu.applications.communication=Communication
 category.global_menu.applications.content=Contenu
-category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
+category.global_menu.applications.custom.apps=Applications personnalisées
 category.google=Google
 category.highlighted=Mis en évidence
 category.kb=Base de connaissance
