--- a/portal-impl/src/content/Language_hu.properties
+++ b/portal-impl/src/content/Language_hu.properties
@@ -65,10 +65,10 @@ category.entertainment=Szórakozás
 category.finance=Pénzügy
 category.gadgets=Kütyük
 category.global_menu.applications=Alkalmazások
-category.global_menu.applications.commerce=Commerce (Automatic Copy)
-category.global_menu.applications.communication=Communication (Automatic Copy)
+category.global_menu.applications.commerce=Kereskedelem
+category.global_menu.applications.communication=Kommunikáció
 category.global_menu.applications.content=Tartalom
-category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
+category.global_menu.applications.custom.apps=Egyéni alkalmazások
 category.google=Google
 category.highlighted=Kiemelt
 category.kb=Tudásbázis
