--- a/portal-impl/src/content/Language_nl.properties
+++ b/portal-impl/src/content/Language_nl.properties
@@ -2144,7 +2144,7 @@ go-to-the-site's-private-pages=Naar besloten pagina's van de site
 go-to-x=Ga naar {0}
 google-apps=Google Apps
 google-client-id=Google Client ID
-google-docs-metadata=Google Docs Metadata (Automatic Copy)
+google-docs-metadata=Metadata van Google Docs
 google-license=Googlelicentie
 googles-spelling-suggestion-for=Het door Google voorgestelde spellingsadvies voor {0} is {1}.
 government=Overheid
