--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_fa.properties
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Manage Organizations
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Manage Suborganizations Accounts
 action.VIEW_ORGANIZATIONS=View Organizations
 action.VIEW_USERS=View Users
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=یک گروه حساب اضافه کنید
 add-account-role=Add Account Role
 add-domain=Add Domain
 add-new-user-to-x=Add New User to {0}
