--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_hu.properties
@@ -1,5 +1,5 @@
 account-display-data=A fiók megjelenített adatai
-account-group-name=Account Group Name (Automatic Copy)
+account-group-name=Fiókcsoport neve
 account-id=Fiókazonosító
 account-roles=Fiókok szerepköre
 action.ADD_ACCOUNT_ENTRY=Fiókbejegyzés hozzáadása
@@ -9,7 +9,7 @@ action.MANAGE_ORGANIZATIONS=Szervezetek kezelése
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Alszervezetek fiókjainak a kezelése
 action.VIEW_ORGANIZATIONS=Szervezetek megjelenítése
 action.VIEW_USERS=Felhasználók megjelenítése
-add-account-group=Add Account Group (Automatic Copy)
+add-account-group=Fiókcsoport hozzáadása
 add-account-role=Fiók szerepkör hozzáadása
 add-domain=Tartomány hozzáadása
 add-new-user-to-x=Új felhasználó hozzáadása ehhez: {0}
@@ -27,7 +27,7 @@ assign-organizations-to-x=Szervezetek hozzárendelése: {0}
 assign-parent-account=Fölérendelt fiók hozzárendelése
 assign-users-to-x=Felhasználók hozzárendelése ehhez: {0}
 current-account-users=Jelenlegi fiókfelhasználók
-domain-name=Domain Name (Automatic Copy)
+domain-name=Tartománynév
 filter-by-accounts=Szűrés fiókok szerint
 filter-by-type=Szűrés típus szerint
 for-multiple-domains,-separate-each-domain-by-a-comma=Több tartomány esetében válassza el a tartományokat vesszővel.
@@ -40,7 +40,7 @@ manage-users=Felhasználók kezelése
 model.resource.com.liferay.account=Fiók
 model.resource.com.liferay.account.model.AccountEntry=Fiókbejegyzés
 more-information=További információk
-no-account-groups-were-found=No account groups were found. (Automatic Copy)
+no-account-groups-were-found=Nem találhatók fiókcsoportok.
 no-accounts-were-found=Nem található fiók.
 no-assigned-account=Nincs hozzárendelt fiók
 parent-account=Fölérendelt fiókopy)
@@ -50,10 +50,10 @@ select-an-account=Válasszon egy fiókot
 showing-users-with-valid-domains-only=Csak érvényes tartománnyal rendelkező felhasználók vannak megjelenítve. Az összes felhasználó megtekintéséhez a szűrő segítségével frissítse a listát.
 tax-id=Adóazonosító
 tax-id-help=Adja meg a fiók adóazonosítóját (EIN, VAT, ÁFA szám, stb.).
-the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=Az alábbi e-mail tartományok a felhasználó minden fiókjában közösek.
 there-are-no-organizations-associated-with-this-account=Ehhez a fiókhoz nincsenek szervezetek társítva.
 there-are-no-roles=Nincsenek szerepkörök.
-there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
+there-are-no-shared-email-domains-for-this-users-accounts=A felhasználó fiókjainak nincs közös e-mail tartománya.
 there-are-no-users-associated-with-this-account=Ehhez a fiókhoz nincsenek felhasználók társítva.
 there-are-no-users-associated-with-this-role=Ehhez a szerepkörhöz nincsenek felhasználók társítva.
 this-account-does-not-have-a-parent-account=Ehhez a fiókhoz nem tartozik fölérendelt fiók.
@@ -61,5 +61,5 @@ this-account-does-not-have-a-valid-domain=Ehhez a fiókhoz nem tartozik érvény
 this-user-does-not-belong-to-any-accounts=Ez a felhasználó nem tartozik semmilyen fiókhoz.
 user-display-data=A felhasználó megjelenített adatai
 valid-domains=Érvényes tartományok
-view-valid-domains=View Valid Domains (Automatic Copy)
-x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
+view-valid-domains=Érvényes tartományok megtekintése
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} nem egy érvényes tartomány az alábbi fiókok esetében: {1}.
