--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/content/Language_ca.properties
@@ -23,4 +23,4 @@ the-asset-subtype-no-longer-exists=El subtipus de contingut ja no existeix.
 the-category-x-and-parent-category-should-not-be-the-same=La categoria {0} i la seva categoria pare no han de ser la mateixa.
 the-vocabulary-could-not-be-found=No s'ha trobat la categoria.
 there-are-no-vocabularies=No hi ha vocabularis.
-vocabularies-are-needed-to-create-categories=Vocabularies are needed to create categories. (Automatic Copy)
+vocabularies-are-needed-to-create-categories=Calen vocabularis per crear categories.
