--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ca.properties
@@ -13,7 +13,7 @@ displayed-assets-must-match-these-custom-user-profile-attributes=Els continguts 
 displayed-assets-must-match-these-rules=Els continguts mostrats han de coincidir amb aquestes regles.
 does-not-contain=No conté
 dynamic-selection=Selecció dinàmica
-edit-display-page-template=Edit Display Page Template (Automatic Copy)
+edit-display-page-template=Edita la plantilla de pàgina de visualització
 filter-by-field=Filtra per camp
 javax.portlet.title.com_liferay_asset_list_web_portlet_AssetListPortlet=Llistes de continguts
 manual-selection=Selecció manual
@@ -38,6 +38,6 @@ there-are-no-collection-providers=There are no collection providers. (Automatic 
 there-are-no-collection-usages=No hi ha usos de la col·lecció.
 there-are-no-collections=No hi ha col·leccions.
 there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
-view-display-page=View Display Page (Automatic Copy)
+view-display-page=Mostra una pàgina de visualització
 view-items=View Items (Automatic Copy)
 view-usages=Mostra els usos
