--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fr.properties
@@ -13,7 +13,7 @@ displayed-assets-must-match-these-custom-user-profile-attributes=Les actifs affi
 displayed-assets-must-match-these-rules=Les actifs affichés doivent respecter ces règles.
 does-not-contain=Ne contient pas
 dynamic-selection=Sélection dynamique
-edit-display-page-template=Edit Display Page Template (Automatic Copy)
+edit-display-page-template=Modifier le modèle de page d'affichage
 filter-by-field=Filtrer par champ
 javax.portlet.title.com_liferay_asset_list_web_portlet_AssetListPortlet=Listes des contenus
 manual-selection=Sélection manuelle
@@ -38,6 +38,6 @@ there-are-no-collection-providers=There are no collection providers. (Automatic 
 there-are-no-collection-usages=Il n'y a aucune utilisation de collection.
 there-are-no-collections=Il n'y a pas de collection.
 there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
-view-display-page=View Display Page (Automatic Copy)
+view-display-page=Afficher une page d'affichage
 view-items=View Items (Automatic Copy)
 view-usages=Afficher les utilisations
