--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_hu.properties
@@ -13,7 +13,7 @@ displayed-assets-must-match-these-custom-user-profile-attributes=A megjelenítet
 displayed-assets-must-match-these-rules=A megjelenő tartalmaknak meg kell felelniük ezeknek a szabályoknak.
 does-not-contain=Nem tartalmazza
 dynamic-selection=Dinamikus választás
-edit-display-page-template=Edit Display Page Template (Automatic Copy)
+edit-display-page-template=Megjelenítő-oldal sablon szerkesztése
 filter-by-field=Szűrés mező szerint
 javax.portlet.title.com_liferay_asset_list_web_portlet_AssetListPortlet=Tartalomlisták
 manual-selection=Manuális kijelölés
@@ -38,6 +38,6 @@ there-are-no-collection-providers=There are no collection providers. (Automatic 
 there-are-no-collection-usages=Nincs gyűjteményhasználat.
 there-are-no-collections=Nincsenek gyűjtemények.
 there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
-view-display-page=View Display Page (Automatic Copy)
+view-display-page=Megjelenítő oldal megtekintése
 view-items=View Items (Automatic Copy)
 view-usages=Használat megjelenítése
