--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_nl.properties
@@ -13,7 +13,7 @@ displayed-assets-must-match-these-custom-user-profile-attributes=Weergegeven ass
 displayed-assets-must-match-these-rules=Weergegeven assets moeten voldoen aan deze regels.
 does-not-contain=Bevat geen
 dynamic-selection=Dynamische selectie
-edit-display-page-template=Edit Display Page Template (Automatic Copy)
+edit-display-page-template=Weergavepaginasjabloon bewerken
 filter-by-field=Op veld filteren
 javax.portlet.title.com_liferay_asset_list_web_portlet_AssetListPortlet=Assetlijsten
 manual-selection=Handmatige selectie
@@ -38,6 +38,6 @@ there-are-no-collection-providers=There are no collection providers. (Automatic 
 there-are-no-collection-usages=Er worden geen collecties gebruikt.
 there-are-no-collections=Er zijn geen collecties.
 there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
-view-display-page=View Display Page (Automatic Copy)
+view-display-page=Weergavepagina bekijken
 view-items=View Items (Automatic Copy)
 view-usages=Gebruiken weergeven
