--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl.properties
@@ -111,7 +111,7 @@ from-your-computer=Van uw computer
 ftl[stands-for]=FreeMarker
 group-id=Groep ID
 import-file=Bestand mporteren
-import-translation=Import Translation (Automatic Copy)
+import-translation=Vertaling importeren
 in-order-to-preview-your-changes,-the-web-content-is-saved-as-a-draft=Om een voorbeeld van uw wijzigingen te bekijken, is de web content opgeslagen als concept. Bent u zeker dat u dit wilt doen?
 index-all-article-versions-enabled=Indexeren alle artikelversies ingeschakeld
 javax.portlet.description.com_liferay_journal_web_portlet_JournalPortlet=Web Content kan elke content zijn die u wilt toevoegen aan een site, zoals artikelen, een FAQ of een nieuwsbericht. Beheerders kunnen de content beheren en er gebruikersrollen en machtigingen aan toevoegen. Gebruikers kunnen toevoegen, bewerken, goedkeuren, of content bekijken, afhankelijk van hun rol.
@@ -201,7 +201,7 @@ please-select-an-existing-small-image=Selecteer een bestaande kleine afbeelding.
 please-select-an-existing-structure=Selecteer een bestaande structuur.
 please-select-an-existing-template=Selecteer een bestaande template.
 please-select-one-option=Kies een optie.
-please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf). (Automatic Copy)
+please-upload-your-translation-file=Upload uw vertaalbestaand (.xliff, .xlf).
 presentation-settings=Presentatie-instellingen
 preview-draft=Voorbeeldweergave concept
 preview-draft-in-page=Voorbeeldweergave concept op pagina
@@ -268,7 +268,7 @@ the-folder-you-selected-does-not-allow-this-type-of-structure.-please-select-a-d
 the-selected-web-content-was-deleted=De geselecteerde webinhoud werd verwijderd.
 the-selected-web-content-was-moved-to-the-recycle-bin=De geselecteerde webinhoud werd verplaatst naar de prullenbak.
 the-structure-you-selected-is-not-valid-for-this-folder=Het geselecteerde documenttype is niet geldig voor deze map.
-the-translation-file-x-does-not-correspond-to-this-web-content=The translation file ({0}) does not correspond to this web content. (Automatic Copy)
+the-translation-file-x-does-not-correspond-to-this-web-content=Het vertaalbestand ({0}) stemt niet overeen met deze webinhoud.
 the-web-content-article-x-was-moved-to-the-recycle-bin=Het webinhoudartikel <strong><em>{0}</em></strong> werd verplaatst naar de prullenbak.
 there-are-no-journal-images=Er zijn geen webinhoudafbeeldingen.
 there-are-no-structures=Er zijn geen structuren.
