--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -37,7 +37,7 @@ container=Contenidor
 container-configuration=Configuració del contenidor
 container-width=Amplada del contenidor
 content-display=Visualització del contingut
-content-edition=Content Edition (Automatic Copy)
+content-edition=Edició de contingut
 content-mapping=Mapatges del contingut
 content-name=Nom del contingut
 content-page-editor-configuration-name=Editor de la pàgina de continguts
@@ -118,7 +118,7 @@ padding-right=Marge interior dret
 padding-top=Marge interior superior
 padding-vertical=Marge interior vertical
 page-conversion-description=La conversió de pàgines es mostra a la previsualització de sota. Feu les modificacions necessàries abans de publicar la conversió, o descarteu l'esborrany per deixar la pàgina del giny en el seu estat original.
-page-design=Page Design (Automatic Copy)
+page-design=Disseny de pàgina
 page-editor-auto-extend-session-enabled-description=En habilitar-la, la sessió s'ampliarà automàticament mentre l'editor de pàgines estigui obert.
 page-editor-configuration-name=Editor de pàgines
 page-structure=Estructura de la pàgina
