--- a/modules/apps/layout/layout-seo-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-seo-web/src/main/resources/content/Language_ca.properties
@@ -7,7 +7,7 @@ enable-open-graph-description=Habilita per inserir les metaetiquetes d'Open Grap
 field-validation-failed=Ha fallat una validació d'un camp personalitzat.
 html-title=Títol HTML
 html-title-help=Aquest text s'aplicarà a la metaetiqueta del títol de dins de la secció de capçalera de la pàgina. La llargada recomanada és de menys de 60 caràcters.
-map-a-x-field-it-will-be-used-as-x=Map a {0} field, it will be used as {1}. (Automatic Copy)
+map-a-x-field-it-will-be-used-as-x=Mapa un camp {0}, s'utilitzarà com a {1}.
 no-value-is-defined-for-field-x=No s'ha definit cap valor per al camp {0}.
 open-graph=Open Graph
 open-graph-alt-description=Descripció alternativa
