--- a/modules/apps/layout/layout-seo-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-seo-web/src/main/resources/content/Language_nl.properties
@@ -7,7 +7,7 @@ enable-open-graph-description=Schakel dit in om de Open Graph-metalabels in te s
 field-validation-failed=Een validatie van een aangepast veld is mislukt.
 html-title=HTML-titel
 html-title-help=Deze tekst wordt toegepast voor de titel metatag in de kop van de pagina. De aanbevolen lengte is maximaal 60 tekens.
-map-a-x-field-it-will-be-used-as-x=Map a {0} field, it will be used as {1}. (Automatic Copy)
+map-a-x-field-it-will-be-used-as-x=Wijs een {0} veld toe, het zal gebruikt worden als {1}.
 no-value-is-defined-for-field-x=Geen waarde gedefinieerd voor het veld {0}.
 open-graph=Open Graph
 open-graph-alt-description=Alt-tekst
@@ -24,7 +24,7 @@ please-enter-a-valid-page-priority=Voer een geldige paginaprioriteit in.
 please-select-a-valid-change-frequency=Selecteer een geldige wijzigingsfrequentie.
 please-select-a-valid-include-value=Selecteer een geldige invoegwaarde.
 preview-help=De beeldverhouding kan veranderen volgens de plaats waar de URL werd gepubliceerd.
-unmapped=Unmapped (Automatic Copy)
+unmapped=Niet toegewezen
 use-custom-canonical-url=Aangepaste canonieke URL gebruiken
 use-custom-canonical-url-alert-info=Door de aanpassing van de canonieke URL en afhankelijk van het platform waarop de pagina wordt gedeeld, is het mogelijk dat de weergegeven Open Graph-metadata niet de data zijn die werden geconfigureerd op deze pagina.
 use-custom-canonical-url-help=Gebruik een aangepaste canonieke URL voor deze pagina in plaats van de configuratie van de systeeminstellingen.
