--- a/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_ca.properties
@@ -1,3 +1,3 @@
-enable-global-menu=Enable Global Apps Menu (Automatic Copy)
-enable-global-menu-description=When enabled, global Control Panel applications are removed from the left-hand Product Menu and stored in a Global Apps Menu, which you can access from the grid menu icon in the upper-right corner. (Automatic Copy)
-global-menu-instance-configuration-name=Global Apps Menu (Automatic Copy)
+enable-global-menu=Habilita el menú d'aplicacions globals
+enable-global-menu-description=Si s'habilita aquesta opció, les aplicacions del tauler de control se suprimeixen del menú de productes de l'esquerra i s'emmagatzemen en un menú d'aplicacions globals, al qual es pot accedir des de la icona del menú de quadrícula de l'extrem superior dret.
+global-menu-instance-configuration-name=Menú d'aplicacions globals
