--- a/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/product-navigation/product-navigation-global-menu-api/src/main/resources/content/Language_fr.properties
@@ -1,3 +1,3 @@
-enable-global-menu=Enable Global Apps Menu (Automatic Copy)
-enable-global-menu-description=When enabled, global Control Panel applications are removed from the left-hand Product Menu and stored in a Global Apps Menu, which you can access from the grid menu icon in the upper-right corner. (Automatic Copy)
-global-menu-instance-configuration-name=Global Apps Menu (Automatic Copy)
+enable-global-menu=Activer le menu des applications globales
+enable-global-menu-description=Lorsqu'elles sont activées, les applications globales du panneau de configuration sont supprimées du menu produit de gauche et stockées dans un menu d'applications globales, auquel vous pouvez accéder à partir de l'icône du menu de la grille en haut à droite.
+global-menu-instance-configuration-name=Menu des applications globales
