--- a/modules/apps/questions/questions-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/questions/questions-web/src/main/resources/content/Language_ca.properties
@@ -25,7 +25,7 @@ latest-edited=Edició més recent
 latest-usage=Ús més recent: {0}
 mark-as-answer=Marca com a resposta
 my-activity=La meva activitat
-my-subscriptions=Les meves subscripcions (Automatic Translation)
+my-subscriptions=Les meves subscripcions
 number-of-replies=Nombre de respostes
 post-answer=Publica la resposta
 post-your-question=Publica la teva pregunta
