--- a/modules/apps/questions/questions-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/questions/questions-web/src/main/resources/content/Language_hu.properties
@@ -25,7 +25,7 @@ latest-edited=Utoljára szerkesztve
 latest-usage=Legutóbbi felhasználás: {0}
 mark-as-answer=Megjelölés válaszként
 my-activity=Tevékenységeim
-my-subscriptions=Saját előfizetések (Automatic Translation)
+my-subscriptions=Feliratkozásaim
 number-of-replies=Válaszok száma
 post-answer=Válasz beküldése
 post-your-question=Küldje be kérdését
