--- a/modules/apps/questions/questions-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/questions/questions-web/src/main/resources/content/Language_nl.properties
@@ -25,7 +25,7 @@ latest-edited=Meest recent bewerkt
 latest-usage=Laatste gebruik: {0}
 mark-as-answer=Als antwoord markeren
 my-activity=Mijn activiteit
-my-subscriptions=My Subscriptions (Automatic Copy)
+my-subscriptions=Mijn abonnementen
 number-of-replies=Aantal antwoorden
 post-answer=Antwoord publiceren
 post-your-question=Publiceer uw vraag
